--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <p>
     Isn't it
     <strong>really</strong>
-    <em>awesome</em>
-    ?!
+    <em>awesome</em>?!
   </p>
+
+  <div>
+    <a href="about.html">About Page</a>
+  </div>
 
   <div>
     <a href="http://google.com">The rest of the internet</a>
