--- a/about.html
+++ b/about.html
@@ -1,13 +1,34 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>About Page</title>
-</head>
+  <head>
+    <title>About Page</title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td>
+          <a href="index.html">Home</a>
+        </td>
+        <td>
+          <a href="about.html">About</a>
+        </td>
+        <td>
+          <a href="students.html">Students</a>
+        </td>
+      </tr>
+    </table>
 
-<body>
-  <h1>All about me</h1>
-  <div>
-    <a href="index.html" target="_blank">Go Home</a>
-  </div>
-  <p>I'll put more here later</p>
-</body>
+    <h1>About KIEI-451</h1>
+
+    <ul>
+      <li>Week 1</li>
+    </ul>
+
+    <h2>Week 1</h2>
+    <div>
+      We learned about
+      <a href="http://google.com">The Internet</a>
+      <img src="baby.gif">
+    </div>
+  </body>
 </html>
