--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Best 90s website in 2020</title>
-</head>
-<body>
-  <h1>This is my very first website!</h1>
+<html lang="en">
+  <head>
+    <title>Best 90s website in 2020</title>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td>
+          <a href="index.html">Home</a>
+        </td>
+        <td>
+          <a href="about.html">About</a>
+        </td>
+        <td>
+          <a href="students.html">Students</a>
+        </td>
+      </tr>
+    </table>
 
-  <p>
-    Isn't it
-    <strong>really</strong>
-    <em>awesome</em>?!
-  </p>
+    <h1>The KIEI-451 website!</h1>
 
-  <div>
-    <a href="about.html">About Page</a>
-  </div>
-
-  <div>
-    <a href="http://google.com">The rest of the internet</a>
-    <img src="baby.gif">
-  </div>
-
-  <table>
-    <tr>
-      <td>I'm in <span>row 1</span>, Cell 1</td>
-      <td>I'm in row 1, Cell 2</td>
-    </tr>
-    <tr>
-      <td>I'm in row 2, cell 1</td>
-      <td>I'm in row 2, cell 2</td>
-    </tr>
-  </table>
-</body>
+    <p>
+      This class is gonna be
+      <em>soooooooooo</em>
+      <strong>awesome</strong>!
+    </p>
+  </body>
 </html>
