update eng's website

--- a/students.html
+++ b/students.html
@@ -27,7 +27,7 @@
       </tr>
       <tr>
         <td>Brian Eng</td>
-        <td></td>
+        <td><a href="http://eng.github.io">eng.github.io</a></td>
       </tr>
       <tr>
         <td>Ben Block (Professor)</td>
